db option props

--- a/leveldb/leveldb.properties
+++ b/leveldb/leveldb.properties
@@ -1,10 +1,10 @@
-ldb_path=testdb
-ldb_format=single
-ldb_destroy=true
+leveldb.dbname=/tmp/ycsb-leveldb
+leveldb.format=single
+leveldb.destroy=false
 
-ldb_write_buffer_size=67108864
-ldb_max_file_size=67108864
-ldb_max_open_files=1000
-ldb_compression=snappy
-
-sleepafterload=10
+leveldb.write_buffer_size=67108864
+leveldb.max_file_size=67108864
+leveldb.max_open_files=1000
+leveldb.compression=snappy
+leveldb.cache_size=134217728
+leveldb.filter_bits=10
