--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,6 +1,7 @@
-rocks_path=testdb
-rocks_format=single
-rocks_destroy=true
+rocksdb.dbname=/tmp/ycsb-rocskdb
+rocksdb.format=single
+rocksdb.destroy=false
 
-rocks_increase_parallelism=true
-rocks_optimize_level_style_compaction=true
+rocksdb.compression=snappy
+rocksdb.increase_parallelism=true
+rocksdb.optimize_level_style_compaction=true
