load rocksdb options file

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -2,6 +2,9 @@ rocksdb.dbname=/tmp/ycsb-rocskdb
 rocksdb.format=single
 rocksdb.destroy=false
 
+#rocksdb.optionsfile=rocksdb_optionfile.ini
+
+# below options are ignored if optionsfile is used
 rocksdb.compression=snappy
 rocksdb.increase_parallelism=true
 rocksdb.optimize_level_style_compaction=true
