--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -2,9 +2,10 @@ rocksdb.dbname=/tmp/ycsb-rocskdb
 rocksdb.format=single
 rocksdb.destroy=false
 
-#rocksdb.optionsfile=rocksdb_optionfile.ini
+# Load options from file
+#rocksdb.optionsfile=rocksdb/options.ini
 
-# below options are ignored if optionsfile is used
+# Below options are ignored if options file is used
 rocksdb.compression=snappy
 rocksdb.increase_parallelism=true
 rocksdb.optimize_level_style_compaction=true
