--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -7,5 +7,12 @@ rocksdb.destroy=false
 
 # Below options are ignored if options file is used
 rocksdb.compression=snappy
-rocksdb.increase_parallelism=true
-rocksdb.optimize_level_style_compaction=true
+rocksdb.max_background_jobs=2
+rocksdb.target_file_size_base=67108864
+rocksdb.target_file_size_multiplier=1
+rocksdb.max_bytes_for_level_base=268435456
+rocksdb.write_buffer_size=67108864
+rocksdb.max_write_buffer_number=2
+
+rocksdb.increase_parallelism=false
+rocksdb.optimize_level_style_compaction=false
