cache size option

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -13,6 +13,7 @@ rocksdb.target_file_size_multiplier=1
 rocksdb.max_bytes_for_level_base=268435456
 rocksdb.write_buffer_size=67108864
 rocksdb.max_write_buffer_number=2
+rocksdb.cache_size=8388608
 
 rocksdb.increase_parallelism=false
 rocksdb.optimize_level_style_compaction=false
