start measurement after all init completed and update scripts

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,6 +1,6 @@
 rocksdb.dbname=./tmp/ycsb-rocksdb
 rocksdb.format=single
-rocksdb.destroy=false
+rocksdb.destroy=true
 
 # Load options from file
 #rocksdb.optionsfile=rocksdb/options.ini
