feat: support lmdb/leveldb on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ if(MSVC)
 endif()
 
 option(BIND_ROCKSDB "build with rocksdb" OFF)
+option(BIND_LMDB "build with lmdb" OFF)
+option(BIND_LEVELDB "build with leveldb" OFF)
 option(BIND_WIREDTIGER "build with wiredtiger" OFF)
+
 option(WITH_ZLIB "linking YCSB with zlib; needed by HdrHISTOGRAM, DO NOT TURN OFF" ON)
 option(WITH_LZ4 "linking YCSB with lz4" OFF)
 option(WITH_SNAPPY "linking YCSB with snappy" OFF)
@@ -41,6 +44,26 @@ else()
     message(STATUS "BIND_ROCKSDB - OFF")
 endif()
 
+if (BIND_LMDB)
+    message(STATUS "BIND_LMDB - ON")
+    file(GLOB_RECURSE YCSB_LMDB_SRC "lmdb/*.cc")
+    target_sources(ycsb PRIVATE ${YCSB_LMDB_SRC})
+    find_package(lmdb CONFIG REQUIRED)
+    target_link_libraries(ycsb PRIVATE lmdb)
+else()
+    message(STATUS "BIND_LMDB - OFF")
+endif()
+
+if (BIND_LEVELDB)
+    message(STATUS "BIND_LEVELDB - ON")
+    file(GLOB_RECURSE YCSB_LEVELDB_SRC "leveldb/*.cc")
+    target_sources(ycsb PRIVATE ${YCSB_LEVELDB_SRC})
+    find_package(leveldb CONFIG REQUIRED)
+    target_link_libraries(ycsb PRIVATE leveldb::leveldb)
+else()
+    message(STATUS "BIND_LEVELDB - OFF")
+endif ()
+
 if (BIND_WIREDTIGER)
     message(STATUS "BIND_WIREDTIGER - ON")
     file(GLOB_RECURSE YCSB_WT_SRC "wiredtiger/*.cc")
@@ -51,7 +74,7 @@ if (BIND_WIREDTIGER)
     target_include_directories(ycsb PRIVATE ${WIREDTIGER_INCLUDE_DIR})
 else()
     message(STATUS "BIND_WIREDTIGER - OFF")
-endif ()
+endif()
 
 if(WITH_ZLIB)
     message(STATUS "WITH_ZLIB - ON")
