--- a/wiredtiger/wiredtiger.properties
+++ b/wiredtiger/wiredtiger.properties
@@ -1,4 +1,4 @@
-wiredtiger.home=ycsb-wiredtiger
+wiredtiger.home=/tmp/ycsb-wiredtiger
 wiredtiger.format=single
 
 # for detailed description, please see:
