opt: fallbacks for find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,21 @@ if (BIND_ROCKSDB)
     set(WITH_ZLIB ON)  # rocksdb needs zlib
     file(GLOB_RECURSE YCSB_ROCKSDB_SRC "rocksdb/*.cc")
     target_sources(ycsb PRIVATE ${YCSB_ROCKSDB_SRC})
-    find_package(RocksDB CONFIG REQUIRED)
-    target_link_libraries(ycsb PRIVATE RocksDB::rocksdb rpcrt4.lib)
+
+    find_package(RocksDB CONFIG)
+    if(RocksDB_FOUND)
+        target_link_libraries(ycsb PRIVATE RocksDB::rocksdb rpcrt4.lib)
+    else()
+        message(STATUS "Try to find rocksdb library using find_library")
+        find_library(ROCKSDB_LIB rocksdb REQUIRED)
+        find_path(ROCKSDB_INCLUDE_DIR "rocksdb/db.h" REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${ROCKSDB_LIB})
+        target_include_directories(ycsb PRIVATE ${ROCKSDB_INCLUDE_DIR})
+    endif()
+    message(STATUS "Found RocksDB library")
+    if(NOT MSVC)
+        target_link_libraries(ycsb PRIVATE dl)
+    endif()
 else()
     message(STATUS "BIND_ROCKSDB - OFF")
 endif()
@@ -48,8 +61,18 @@ if (BIND_LMDB)
     message(STATUS "BIND_LMDB - ON")
     file(GLOB_RECURSE YCSB_LMDB_SRC "lmdb/*.cc")
     target_sources(ycsb PRIVATE ${YCSB_LMDB_SRC})
+
     find_package(lmdb CONFIG REQUIRED)
-    target_link_libraries(ycsb PRIVATE lmdb)
+    if(lmdb_FOUND)
+        target_link_libraries(ycsb PRIVATE lmdb)
+    else()
+        message(STATUS "Try to find lmdb library using find_library")
+        find_library(LMDB_LIB lmdb REQUIRED)
+        find_path(LMDB_INCLUDE_DIR "lmdb.h" REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${LMDB_LIB})
+        target_include_directories(ycsb PRIVATE ${LMDB_INCLUDE_DIR})
+    endif()
+    message(STATUS "Found LMDB library")
 else()
     message(STATUS "BIND_LMDB - OFF")
 endif()
@@ -58,8 +81,18 @@ if (BIND_LEVELDB)
     message(STATUS "BIND_LEVELDB - ON")
     file(GLOB_RECURSE YCSB_LEVELDB_SRC "leveldb/*.cc")
     target_sources(ycsb PRIVATE ${YCSB_LEVELDB_SRC})
+
     find_package(leveldb CONFIG REQUIRED)
-    target_link_libraries(ycsb PRIVATE leveldb::leveldb)
+    if(leveldb_FOUND)
+        target_link_libraries(ycsb PRIVATE leveldb::leveldb)
+    else()
+        message(STATUS "Try to find leveldb library using find_library")
+        find_library(LEVELDB_LIB leveldb REQUIRED)
+        find_path(LEVELDB_INCLUDE_DIR "leveldb/db.h" REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${LEVELDB_LIB})
+        target_include_directories(ycsb PRIVATE ${LEVELDB_INCLUDE_DIR})
+    endif()
+    message(STATUS "Found leveldb library")
 else()
     message(STATUS "BIND_LEVELDB - OFF")
 endif ()
@@ -78,32 +111,63 @@ endif()
 
 if(WITH_ZLIB)
     message(STATUS "WITH_ZLIB - ON")
-    find_package(ZLIB REQUIRED)
-    target_link_libraries(ycsb PRIVATE ZLIB::ZLIB)
+    find_package(ZLIB)
+    if(ZLIB_FOUND)
+        target_link_libraries(ycsb PRIVATE ZLIB::ZLIB)
+    else()
+        message(STATUS "Try to find zlib library using find_library")
+        find_library(ZLIB_LIB zlib)
+        if(ZLIB_LIB-NOTFOUND)
+            find_library(ZLIB_LIB z REQUIRED)
+        endif()
+        target_link_libraries(ycsb PRIVATE ${ZLIB_LIB})
+    endif()
+    message(STATUS "Found ZLIB library")
 else()
     message(STATUS "WITH_ZLIB - OFF")
 endif()
 
 if(WITH_SNAPPY)
     message(STATUS "WITH_SNAPPY - ON")
-    find_package(Snappy CONFIG REQUIRED)
-    target_link_libraries(ycsb PRIVATE Snappy::snappy)
+    find_package(Snappy CONFIG)
+    if(Snappy_FOUND)
+        target_link_libraries(ycsb PRIVATE Snappy::snappy)
+    else()
+        message(STATUS "Try to find Snappy library using find_library")
+        find_library(SNAPPY_LIB snappy REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${SNAPPY_LIB})
+    endif()
+    message(STATUS "Found Snappy library")
 else()
     message(STATUS "WITH_SNAPPY - OFF")
 endif()
 
 if(WITH_LZ4)
     message(STATUS "WITH_LZ4 - ON")
-    find_package(lz4 CONFIG REQUIRED)
-    target_link_libraries(main PRIVATE lz4::lz4)
+    find_package(lz4 CONFIG)
+    if(lz4_FOUND)
+        target_link_libraries(ycsb PRIVATE lz4::lz4)
+    else()
+        message(STATUS "Try to find LZ4 library using find_library")
+        find_library(LZ4_LIB lz4 REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${LZ4_LIB})
+    endif()
+    message(STATUS "Found LZ4 library")
 else()
     message(STATUS "WITH_LZ4 - OFF")
 endif()
 
 if(WITH_ZSTD)
     message(STATUS "WITH_ZSTD - ON")
-    find_package(zstd CONFIG REQUIRED)
-    target_link_libraries(main PRIVATE $<IF:$<TARGET_EXISTS:zstd::libzstd_shared>,zstd::libzstd_shared,zstd::libzstd_static>)
+    find_package(zstd CONFIG)
+    if(zstd_FOUND)
+        target_link_libraries(ycsb PRIVATE $<IF:$<TARGET_EXISTS:zstd::libzstd_shared>,zstd::libzstd_shared,zstd::libzstd_static>)
+    else()
+        message(STATUS "Try to find zstd library using find_library")
+        find_library(ZSTD_LIB zstd REQUIRED)
+        target_link_libraries(ycsb PRIVATE ${ZSTD_LIB})
+    endif()
+    message(STATUS "Found zstd library")
 else()
     message(STATUS "WITH_ZSTD - OFF")
 endif()
