Fix deprecated options in RocksDB 8.0

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -19,8 +19,10 @@ rocksdb.use_direct_reads=false
 rocksdb.allow_mmap_writes=false
 rocksdb.allow_mmap_reads=false
 rocksdb.cache_size=8388608
-rocksdb.compressed_cache_size=0
 rocksdb.bloom_bits=0
+
+# deprecated since rocksdb 8.0
+rocksdb.compressed_cache_size=0
 
 rocksdb.increase_parallelism=false
 rocksdb.optimize_level_style_compaction=false
