add redis script

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -421,7 +421,7 @@ proc-title-template "{title} {listen-addr} {server-mode}"
 # Snapshotting can be completely disabled with a single empty string argument
 # as in following example:
 #
-# save ""
+save ""
 #
 # Unless specified otherwise, by default Redis will save the DB:
 #   * After 3600 seconds (an hour) if at least 1 change was performed
@@ -501,7 +501,7 @@ rdb-del-sync-files no
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /mnt/cephfs/ycsb-redis
+dir /home/xuhao/YCSB-cpp/tmp/ycsb-redis
 
 ################################# REPLICATION #################################
 
@@ -1435,8 +1435,8 @@ appenddirname "appendonlydir"
 # If unsure, use "everysec".
 
 # appendfsync always
-appendfsync everysec
-# appendfsync no
+# appendfsync everysec
+appendfsync no
 
 # When the AOF fsync policy is set to always or everysec, and a background
 # saving process (a background save or AOF log background rewriting) is
