--- a/sqlite/sqlite.properties
+++ b/sqlite/sqlite.properties
@@ -3,4 +3,4 @@ sqlite.udp_port_svr=31851
 sqlite.client_hostname=localhost
 sqlite.server_hostname=localhost
 sqlite.msg_size=2048
-sqlite.dbname=./tmp/ycsb.db
+sqlite.dbname=./tmp/ycsb-sqlite/ycsb.db
