add more config for sqlite server

--- a/sqlite/sqlite.properties
+++ b/sqlite/sqlite.properties
@@ -4,3 +4,7 @@ sqlite.client_hostname=localhost
 sqlite.server_hostname=localhost
 sqlite.msg_size=2048
 sqlite.dbname=./tmp/ycsb-sqlite/ycsb.db
+sqlite.wal_autocheckpoint=20000
+sqlite.locking_mode=NORMAL
+sqlite.journal_mode=WAL
+sqlite.synchronous=NORMAL
