add wal sync configuration

--- a/rocksdb-clisvr/rocksdb-clisvr.properties
+++ b/rocksdb-clisvr/rocksdb-clisvr.properties
@@ -7,6 +7,7 @@ rocksdb-clisvr.msg_size=2048
 rocksdb.dbname=./tmp/ycsb-rocksdb
 rocksdb.format=single
 rocksdb.destroy=true
+rocksdb.sync_wal=false
 
 # Load options from file
 #rocksdb.optionsfile=rocksdb/options.ini
