add redis configuration

--- a/redis/redis_sync.conf
+++ b/redis/redis_sync.conf
@@ -1434,8 +1434,8 @@ appenddirname "appendonlydir"
 #
 # If unsure, use "everysec".
 
-# appendfsync always
-appendfsync everysec
+appendfsync always
+# appendfsync everysec
 # appendfsync no
 
 # When the AOF fsync policy is set to always or everysec, and a background
