physical port as config

--- a/rocksdb-clisvr/rocksdb-clisvr.properties
+++ b/rocksdb-clisvr/rocksdb-clisvr.properties
@@ -3,6 +3,7 @@ rocksdb-clisvr.udp_port_svr=31851
 rocksdb-clisvr.client_hostname=localhost
 rocksdb-clisvr.server_hostname=localhost
 rocksdb-clisvr.msg_size=2048
+rocksdb-clisvr.phy_port=1
 
 rocksdb.dbname=./tmp/ycsb-rocksdb
 rocksdb.format=single
