--- a/sqlite/sqlite.properties
+++ b/sqlite/sqlite.properties
@@ -3,8 +3,9 @@ sqlite.udp_port_svr=31851
 sqlite.client_hostname=localhost
 sqlite.server_hostname=localhost
 sqlite.msg_size=2048
+sqlite.phy_port=1
 sqlite.dbname=./tmp/ycsb-sqlite/ycsb.db
 sqlite.wal_autocheckpoint=20000
-sqlite.locking_mode=NORMAL
+sqlite.locking_mode=EXCLUSIVE
 sqlite.journal_mode=WAL
 sqlite.synchronous=NORMAL
