app recover bash script ready

--- a/sqlocal/sqlocal.properties
+++ b/sqlocal/sqlocal.properties
@@ -1,5 +1,5 @@
 sqlocal.dbname=./tmp/ycsb-sqlite/ycsb.db
 sqlocal.wal_autocheckpoint=20000
-sqlocal.locking_mode=NORMAL
+sqlocal.locking_mode=EXCLUSIVE
 sqlocal.journal_mode=WAL
 sqlocal.synchronous=NORMAL
