--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ option(BIND_ROCKSDB "build with rocksdb" OFF)
 option(BIND_LMDB "build with lmdb" OFF)
 option(BIND_LEVELDB "build with leveldb" OFF)
 option(BIND_WIREDTIGER "build with wiredtiger" OFF)
+option(BIND_UNQLITE "build with unqlite" OFF)
 
 option(WITH_ZLIB "linking YCSB with zlib; needed by HdrHISTOGRAM, DO NOT TURN OFF" ON)
 option(WITH_LZ4 "linking YCSB with lz4" OFF)
@@ -193,6 +194,14 @@ if(WITH_BZ2)
     message(STATUS "Found BZip2 library")
 else()
     message(STATUS "WITH_BZ2 - OFF")
+endif()
+
+if (BIND_UNQLITE)
+    message(STATUS "BIND_UNQLITE - ON")
+    file(GLOB_RECURSE YCSB_UNQLITE_SRC "unqlite/*.cc")
+    target_sources(ycsb PRIVATE ${YCSB_UNQLITE_SRC})
+else()
+    message(STATUS "BIND_UNQLITE - OFF")
 endif()
 
 add_subdirectory(HdrHistogram_c)
