properly link unqlite library; fix unqlite bench bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,8 @@ if (BIND_UNQLITE)
     message(STATUS "BIND_UNQLITE - ON")
     file(GLOB_RECURSE YCSB_UNQLITE_SRC "unqlite/*.cc")
     target_sources(ycsb PRIVATE ${YCSB_UNQLITE_SRC})
+    file(GLOB_RECURSE YCSB_UNQLITE_LIB "unqlite/unqlite/unqlite.c")
+    target_sources(ycsb PRIVATE ${YCSB_UNQLITE_LIB})
 else()
     message(STATUS "BIND_UNQLITE - OFF")
 endif()
