--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "unqlite/unqlite"]
 	path = unqlite/unqlite
 	url = https://github.com/symisc/unqlite
+[submodule "third-party/leveldb"]
+	path = third-party/leveldb
+	url = https://github.com/google/leveldb
