properly implement terarkdb; include instructions for building terarkdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ option(BIND_LMDB "build with lmdb" OFF)
 option(BIND_LEVELDB "build with leveldb" OFF)
 option(BIND_WIREDTIGER "build with wiredtiger" OFF)
 option(BIND_UNQLITE "build with unqlite" OFF)
+option(BIND_TERARKDB "build with terarkdb" OFF)
 
 option(WITH_ZLIB "linking YCSB with zlib; needed by HdrHISTOGRAM, DO NOT TURN OFF" ON)
 option(WITH_LZ4 "linking YCSB with lz4" OFF)
@@ -204,6 +205,36 @@ if (BIND_UNQLITE)
     target_sources(ycsb PRIVATE ${YCSB_UNQLITE_LIB})
 else()
     message(STATUS "BIND_UNQLITE - OFF")
+endif()
+
+if (BIND_TERARKDB)
+    message(STATUS "BIND_TERARKDB - ON")
+
+    file(GLOB YCSB_TERARKDB_SRC "terarkdb/*.cc")
+    target_sources(ycsb PRIVATE ${YCSB_TERARKDB_SRC})
+
+    find_library(TERARKDB_LIB terarkdb HINTS "${CMAKE_CURRENT_SOURCE_DIR}/terarkdb/terarkdb/build/build" REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${TERARKDB_LIB})
+    target_include_directories(ycsb PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/terarkdb/terarkdb/build/build/include")
+
+    # link all of terarkdb's dependencies
+    set(TERARKDB_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/terarkdb/terarkdb/build")
+    set(TERARKDB_LIB_DEPS_DIR "${TERARKDB_BUILD_DIR}/lib")
+    find_library(BZ2_LIB bz2 HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${BZ2_LIB})
+    find_library(LZ4_LIB lz4 HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${LZ4_LIB})
+    find_library(ZSTD_LIB zstd HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${ZSTD_LIB})
+    find_library(JEMALLOC_LIB jemalloc HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${JEMALLOC_LIB})
+    find_library(SNAPPY_LIB snappy HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${SNAPPY_LIB})
+    find_library(Z_LIB z HINTS TERARKDB_LIB_DEPS_DIR REQUIRED)
+    target_link_libraries(ycsb PRIVATE ${Z_LIB})
+    target_include_directories(ycsb PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/terarkdb/terarkdb/build/include")
+else()
+    message(STATUS "BIND_TERARKDB - OFF")
 endif()
 
 add_subdirectory(HdrHistogram_c)
