add rocksdb as third-party dependency/submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "third-party/leveldb"]
 	path = third-party/leveldb
 	url = https://github.com/google/leveldb
+[submodule "third-party/rocksdb"]
+	path = third-party/rocksdb
+	url = git@github.com:facebook/rocksdb.git
