--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,11 @@ if (BIND_ROCKSDB)
 
     find_package(RocksDB CONFIG)
     if(RocksDB_FOUND)
-        target_link_libraries(ycsb PRIVATE RocksDB::rocksdb rpcrt4.lib)
+        if(MSVC)
+            target_link_libraries(ycsb PRIVATE RocksDB::rocksdb rpcrt4.lib)
+        else()
+            target_link_libraries(ycsb PRIVATE RocksDB::rocksdb)
+        endif()
     else()
         message(STATUS "Try to find rocksdb library using find_library")
         find_library(ROCKSDB_LIB rocksdb REQUIRED)
