Add RocksDB WriteOptions.sync property

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,6 +1,7 @@
 rocksdb.dbname=/tmp/ycsb-rocksdb
 rocksdb.format=single
 rocksdb.destroy=false
+rocksdb.sync=false
 
 # Load options from file
 #rocksdb.optionsfile=rocksdb/options.ini
